Version 0.11.0 (2022-01-0x)
- Add positional arguments
- Add missing channel no
- Set ED_PHY_CHANNEL min_length to 1
- Add platform zu hub entities
- Use entities in properties
- Add transition to dimmer

Version 0.10.0 (2021-12-31)
- Make reset_motion, reset_presence a button
- add check to device_name / Fixes

Version 0.9.1 (2021-12-30)
- Load and clear caches async
- Extend naming strategy to use device name if channel name is not customized

Version 0.9.0 (2021-12-30)
- Add new helper for event_name
- Add channel to click_event payload

Version 0.8.0 (2021-12-29)
- Use base class for file cache
- Rename primary_client to client
- Add export for device definition

Version 0.7.0 (2021-12-28)
- Remove deleted entities from device and central collections
- use datetime for last_events
- Climate IP: use calendar for duration away

Version 0.6.1 (2021-12-27)
- Display profiles only when hvac_mode auto is enabled
- Fix binary sensor state update for hmip 2-state sensors

Version 0.6.0 (2021-12-27)
- Add climate methods for away mode
- Fix HVAC_MODE_OFF for climate

Version 0.5.1 (2021-12-26)
- Fix hm_light turn_off

Version 0.5.0 (2021-12-25)
- Fix Select Entity
- Remove internal device temperature (ACTUAL_TEMPERATURE CH0)
- Support Cool Mode for IPThermostats
- Display if AWAY_MODE is set on thermostat
- Separate device_address and channel_address

Version 0.4.0 (2021-12-24)
- Use datetime for last_updated (time_initialized)
- Fix example
- Add ACTUAL_TEMPERATURE as separate entity by @towo
- Add HEATING_COOLING to IPThermostat and Group
- Add (*)HUMIDITY and (*)TEMPERATURE as separate entities for Bidcos thermostats
- use ACTIVE_PROFILE in climate presets

Version 0.3.1 (2021-12-23)
- Make HmIP-BSM a switch (only dimable devices should be lights)

Version 0.3.0 (2021-12-23)
- Cleanup API, device/entity
- Add ACTIVE_PROFILE to IPThermostat

Version 0.2.0  (2021-12-22)
- Cleanup API, reduce visibility
- Add setValue to client

Version 0.1.2  (2021-12-21)