@@ -35,10 +35,10 @@ class HmText(GenericEntity[str]):
         )
 
     @property
-    def state(self) -> str | None:
-        """Get the state of the entity."""
-        return self._state
+    def value(self) -> str | None:
+        """Get the value of the entity."""
+        return self._value
 
     async def send_value(self, value: str | None) -> None:
-        """Set the state of the entity."""
+        """Set the value of the entity."""
         await super().send_value(value)
